schema/testdata/validation_reserved_action_name_request_password_reset_function/schema.keel
model User {
    fields {
        email Text
    }

    functions {
        create requestPasswordReset() with (email)
    }
}

api Web {
    models {
        User
    }
}
