schema/testdata/errors/reserved_action_name_authenticate_custom_function.keel
model User {
    fields {
        email Text
    }

    actions {
        //expect-error:16:28:NamingError:There already exists a reserved action with the name 'authenticate'
        create authenticate() with (email)
    }
}

api Web {
    models {
        User
    }
}
